--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,21 +23,24 @@
 ###########################################################################
 
 
-project ("PLSA-Base" LANGUAGES C)
+##  Set the minimum required CMake version
+cmake_minimum_required (VERSION 3.5 FATAL_ERROR)
 
-cmake_minimum_required (VERSION 3.2 FATAL_ERROR)
+##  Define the project
+project ("PLSA-Base" LANGUAGES C)
 
 
 ########################################
 ##  Define some variables
 
 ##  Testing compilation flags, some of which are suggested by the Valgrind 3.3 >
-# set (MY_CXX_FLAGS "-pedantic -Wno-long-long -g -fno-inline -O0 -Wall")
+# set (MY_C_FLAGS "-pedantic -Wno-long-long -g -fno-inline -O0 -Wall")
 ##  Release compilation flags, suggested by the Valgrind 3.3 book
-set (MY_CXX_FLAGS "-O3 -Wall")
+set (MY_C_FLAGS "-O3 -Wall -Wno-unused-result -Wno-unused-but-set-variable")
 
 set (TARGET_NAME_EXEC "plsa")
 set (CURR_PROJECT_NAME "PLSA-Base")
+
 
 ########################################
 ##  Define the source files
@@ -54,13 +57,20 @@ set (SRC_FILES
   wmalloc.c
 )
 
+
+########################################
+##  Define the executable
+
 add_executable (${TARGET_NAME_EXEC} ${SRC_FILES})
+
+##  Link the executable to the math library
 target_link_libraries (${TARGET_NAME_EXEC} m)
+
 
 ########################################
 ##  Set initial compilation flags
 
 ##  Set compiler flags based on global variable
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MY_CXX_FLAGS}")
+set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MY_C_FLAGS}")
 
 
